# sptam

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  package.xml  sptam_plugin.xml
cmake-modules/: FindG2O.cmake  FindOpenGV.cmake  FindSuiteSparse.cmake  dependencies.cmake  options.cmake
configurationFiles/: euroc_gftt_brief.yaml  euroc_orb_brief.yaml  kitti.yaml  kitti_cam_00_to_02_13_to_21.yaml  kitti_cam_03.yaml  kitti_cam_04_to_12.yaml  kitti_gftt_brisk.yaml  level7.yaml  mit.yaml
launch/: euroc.launch  kitti.launch  level7.launch  mit.launch
scripts/: euroc_add_camera_info.py
src/ros/: CMakeLists.txt  base_driver.cpp  base_driver.hpp  main.cpp  sptam_node.cpp  sptam_node.hpp  sptam_nodelet.cpp  stereo_driver.cpp  stereo_driver.hpp
src/ros/utils/: opencv_parsers.cpp  opencv_parsers.hpp  tf2eigen.hpp  tf_utils.cpp  tf_utils.hpp
src/sptam/: BundleDriver.cpp  BundleDriver.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraParameters.hpp  CameraPose.cpp  CameraPose.hpp  CovisibilityWindow.cpp  CovisibilityWindow.hpp  FeatureExtractorThread.cpp  FeatureExtractorThread.hpp  Frame.cpp  Frame.hpp  FrustumCulling.cpp  FrustumCulling.hpp  ILocalWindow.hpp  ImageFeatures.cpp  ImageFeatures.hpp  KeyFramePolicy.hpp  MEAS.hpp  Map.cpp  Map.hpp  MapMaker.cpp  MapMaker.hpp  MapMakerThread.cpp  MapMakerThread.hpp  MapPoint.cpp  MapPoint.hpp  Match.hpp  Measurement.cpp  Measurement.hpp  MotionModel.cpp  MotionModel.hpp  ParallelFeatureExtractor.hpp  PosePredictor.hpp  RectifiedCameraParameters.hpp  RowMatcher.cpp  RowMatcher.hpp  StereoFrame.cpp  (+16 more)
src/sptam/loopclosing/: LCDetector.hpp  LoopClosing.cpp  LoopClosing.hpp  PoseEstimator.cpp  PoseEstimator.hpp  SmoothEstimatePropagator.cpp  SmoothEstimatePropagator.hpp  StereoMatcher.cpp  StereoMatcher.hpp
src/sptam/loopclosing/detectors/: DLDLoopDetector.cpp  DLDLoopDetector.hpp  FBRISK.cpp  FBRISK.h
src/sptam/utils/: CovisibilityGraph.cpp  CovisibilityGraph.hpp  Draw.cpp  Draw.hpp  Hash2D.hpp  Iterable.hpp  Logger.cpp  Logger.hpp  Profiler.hpp  Time.hpp  concurrent_queue.hpp  covariance_ellipsoid.hpp  cv2eigen.hpp  eigen_alignment.hpp  fixed_queue.hpp  macros.hpp  pose_covariance.cpp  pose_covariance.hpp  projection_derivatives.cpp  projection_derivatives.hpp  projective_math.hpp  set_union.hpp  timer.cpp  timer.h
src/sptam/utils/draw/: Draw.cpp  Draw.hpp  TrackerView.hpp
src/sptam/utils/log/: Logger.cpp  Logger.hpp  Profiler.hpp  ScopedProfiler.hpp
src/sptam/utils/time/: time.h
src/standAlone/: CMakeLists.txt  KITTIGroundTruth.cpp  KITTIGroundTruth.hpp  SptamWrapper.cpp  SptamWrapper.hpp  SptamWrapperThread.cpp  StereoImageFeatures.hpp  Timestamps.cpp  Timestamps.hpp  configuration_parser_opencv2.hpp  configuration_parser_opencv3.hpp  sptam-stereo.cpp
src/standAlone/FrameGenerator/: FileSequenceFrameGenerator.cpp  FileSequenceFrameGenerator.h  FrameGeneratorFactory.hpp  IFrameGenerator.h  ListOfFilesFrameGenerator.cpp  ListOfFilesFrameGenerator.h  VideoFileFrameGenerator.cpp  VideoFileFrameGenerator.h
src/standAlone/utils/: ProgramOptions.cpp  ProgramOptions.hpp
src/tests/: CMakeLists.txt
src/tests/sptam/: CMakeLists.txt
src/tests/sptam/CovisibilityGraph/: CMakeLists.txt  test_CovisibilityGraph.cpp
src/tests/sptam/utils/: CMakeLists.txt
src/tests/sptam/utils/set_union/: CMakeLists.txt  test_set_union.cpp
