<?xml version="1.0"?>
<package>
  <name>sptam</name>
  <version>0.0.0</version>
  <description>The sptam package</description>

  <maintainer email="tpire@dc.uba.ar">taihu</maintainer>
  <maintainer email="tfischer@dc.uba.ar">taihu</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/lrse/sptam</url>

  <author email="tpire@dc.uba.ar">Taihú Pire</author>
  <author email="tfischer@dc.uba.ar">Thomas Fischer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>

  </export>
</package>
