<?xml version="1.0"?>
<package format="2">
  <name>sptam</name>
  <version>0.0.0</version>
  <description>The sptam package</description>

  <maintainer email="tpire@dc.uba.ar">taihu</maintainer>
  <maintainer email="tfischer@dc.uba.ar">taihu</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/lrse/sptam</url>

  <author email="tpire@dc.uba.ar">Taihú Pire</author>
  <author email="tfischer@dc.uba.ar">Thomas Fischer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>
  <depend>image_geometry</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cmake_modules</depend>
  <depend>nodelet</depend>
  <depend>libg2o</depend>

  <export>
    <nodelet plugin="${prefix}/sptam_plugin.xml" />
  </export>
</package>
